JEDIT 4.2 VERSION HISTORY

{{{ Version 4.3pre1

Thanks to Marcelo Vanzin, Nicholas O'Leary and Trevor Harmon for
contributing to this release.

{{{ Miscellaneous

- jEdit no longer runs with Java 2 version 1.3. Java 2 version 1.4 or
  1.5 is now required.

- Rename Autosave & Backup option pane to Save & Backup, move some
  options from General pane there (Marcelo Vanzin).

- Added Ant target for building a MacOS X .app package (Trevor Harmon).

- Added Register and Marker dockables (Nicholas O'Leary).

}}}
{{{ Bug Fixes

- "Backup directory" feature now works if the file being edited is on a
  different filesystem than the backup directory (Marcelo Vanzin).

- Don't use two-stage save if the file's parent directory is not
  writeable (Marcelo Vanzin).

}}}
{{{ API Changes

- Removed EditPlugin.JAR, deprecated since 4.2.

}}}

}}}

{{{ Version 4.2final

Thanks to Brant Gurganus, Justin Dieters, Ollie Rutherfurd and Thomas
Bock for contributing to this release.

{{{ Syntax Highlighting

- Added Factor syntax highlighting.

- Updated BBj syntax highlighting (Thomas Bock).

- Added ANTLR syntax highlighting (Brant Gurganus).

- Added D syntax highlighting (Jim Lawton).

- Added INNO setup syntax highlighting (Ollie Rutherfurd).

- Added Doxygen syntax highlighting. This includes doxyfile*
  configuration files, and Doxygen comments in C, C++, Objective-C and
  D modes. (Jim Lawton)

}}}
{{{ Scripting

- Some new clipboard macros (Ollie Rutherfurd).

}}}
{{{ Bug Fixes

- Fix a roundoff error in the monospaced font optimization that would
  result in zero-width tabs using some fonts.

- When printing, any syntax styles with a foreground color of white are
  printed as black (Justin Dieters).

- Entering / in the file system browser dialog's text field no longer
  has any special action if the caret is not at the end of the field.

- Removed the feature that would pass arrow keys to the text area from
  the search bar, since people didn't like it and it didn't work